@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 05:28:16 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 05:30:43 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -66,5 +66,11 @@
   <description>今日K-pop：Stray Kids將於下月在日本發行第二張專輯 。Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這支八人組合於2020年3月在日本出道，推出精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。。。以下是Stray Kids在日本的成績：</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 05:28:16 +0800</pubDate>
+</item><item>
+  <title>K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」</title>
+  <link>https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html</link>
+  <description>KpopCEO們在國會聽證會上迴避重點問題10月7日Kpop娛樂公司在國會聽證會上否認或迴避對行業內的重大問題承擔責任YG娛樂CEO楊賢碩SM娛樂CEO張哲赫和JYP娛樂CEO鄭煜出席了國會聽證會回答議員們關於榜單操縱專輯與照片卡捆綁銷售公平交易法違反和舞蹈版權問題的提問海譜Hybe由其子公司WeverseCo的CEO崔俊代表出席民主黨議員林五卿提出了榜單操縱的問題指出娛樂...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 05:30:43 +0800</pubDate>
 </item></channel>
 </rss>
