@@ -1,0 +1,305 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u5de8\u982dCEO\u570b\u6703\u807d\u8b49\u6703\u4e0a\u5927\u73a9\u6587\u5b57\u904a\u6232\uff01\u699c\u55ae\u64cd\u7e31\u3001\u7167\u7247\u5361\u6346\u7d81\u92b7\u552e\u3001\u821e\u8e48\u7248\u6b0a\u554f\u984c\u5168\u90fd\u300c\u4e0d\u77e5\u60c5\u300d", "description": "K-pop\u5de8\u982dCEO\u570b\u6703\u807d\u8b49\u6703\u4e0a\u5927\u73a9\u6587\u5b57\u904a\u6232\uff01\u699c\u55ae\u64cd\u7e31\u3001\u7167\u7247\u5361\u6346\u7d81\u92b7\u552e\u3001\u821e\u8e48\u7248\u6b0a\u554f\u984c\u5168\u90fd\u300c\u4e0d\u77e5\u60c5\u300d", "url": "https://www.famechos.me/news/K-pop\u5de8\u982dCEO\u570b\u6703\u807d\u8b49\u6703\u4e0a\u5927\u73a9\u6587\u5b57\u904a\u6232\uff01\u699c\u55ae\u64cd\u7e31\u3001\u7167\u7247\u5361\u6346\u7d81\u92b7\u552e\u3001\u821e\u8e48\u7248\u6b0a\u554f\u984c\u5168\u90fd\u300c\u4e0d\u77e5\u60c5\u300d.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T05:30:35.840276+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html"/>
+<meta name="description" content="K-pop巨頭CEO國會聽證會上玩弄文字遊戲，回應榜單操縱、照片卡捆綁銷售、舞蹈版權問題均表示「不知情」，引發爭議。">
+
+<meta name="keywords" content="K-pop巨頭CEO國會聽證會、榜單操縱、照片卡捆綁銷售、舞蹈版權問題、不知情">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html" />
+        <meta property="og:title" content="K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」" />
+        <meta property="og:description" content="K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」" />
+        <meta property="twitter:description" content="K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>10月7日，K-pop娛樂公司在國會聽證會上否認或迴避對行業內的重大問題承擔責任。YG娛樂CEO楊賢碩、SM娛樂CEO張哲赫和JYP娛樂CEO鄭煜出席了國會聽證會，回答議員們關於榜單操縱、專輯與照片卡捆綁銷售、公平交易法違反和舞蹈版權問題的提問。海譜（Hybe）由其子公司Weverse Co.的CEO崔俊代表出席。</p>
+<p>民主黨議員林五卿提出了榜單操縱的問題，指出娛樂公司通過大量購買實體專輯來人為地提高銷售量，尤其是在專輯發行的第一周。這些專輯可能會被轉賣給粉絲，從而影響榜單排名。</p>
+<p>對於林五卿的提問，SM娛樂CEO張哲赫回應稱：“公司與經銷商之間的協議是專輯發行的基礎，我將與公司核實是否存在此類行為。”</p>
+<p>文化部長柳仁村承認監管每一例榜單操縱行為的困難，但強調如果確認此類行為，將追究法律責任。</p>
+<p>林五卿還批評K-pop娛樂公司將專輯與收藏照片卡捆綁銷售，迫使粉絲購買多份專輯以收集每一版本。批評者認為這種行為導致過度消費和不必要的浪費。</p>
+<p>林五卿舉例說：“一張專輯發行了100多種照片卡，有些平台上粉絲交易這些卡片，通常以高價交易。雖然專輯本身可能只需2萬韓元（約15美元），但一些罕見的照片卡可以轉賣到10萬韓元甚至更高價格。”</p>
+<p>Weverse CEO崔俊將公司與此問題撇清，稱Weverse僅促進唱片公司與粉絲之間的互動，不控制營銷策略。</p>
+<p>當被問及粉絲花費巨額金錢參加簽名會，一些粉絲甚至負債時，JYP娛樂CEO鄭煜同樣推卸責任。</p><h2>Weverse 簽名會問題引發爭議</h2>
+<p>韓國文化產業振興院運營著一個報告中心，以處理對此類營銷策略的投訴。如果必要，案件可能會被轉交調查。</p>
+<p>民主黨議員閔炯培提出了Weverse違反公平交易法的問題。公平交易委員會發現Weverse和其他三家公司縮短了法律規定的退款期限，僅提供7天的退款窗口，而不是法定的30天。</p>
+<p>Weverse去年的銷售額達到325億韓元，2021年至2024年間總計達到1.2萬億韓元。然而，Weverse Co.只支付了略高於300萬韓元的罰款，這僅佔總銷售額的0.000025%。這引發了人們對此類微不足道的罰款無法有效遏制潛在違法行為的擔憂。</p>
+<p>Weverse CEO崔俊承認問題，並表示已經實施了糾正措施，包括對客戶權益和產品交付時間表的更明確指引。</p>
+<h3>舞蹈版權問題</h3>
+<p>民主黨議員閔炯培還提出了舞蹈版權問題，指出K-pop編舞師沒有得到公平的認可和補償。雖然K-pop公司從舞蹈中賺取了巨額收入，但編舞師通常只收到固定費用，沒有任何額外的補償。</p>
+<table>
+<tr>
+<th>公司</th>
+<th>銷售額</th>
+<th>罰款</th>
+</tr>
+<tr>
+<td>Weverse</td>
+<td>325億韓元</td>
+<td>300萬韓元</td>
+</tr>
+</table>
+<h2>韓國娛樂公司舞蹈編排費用支付的不公平問題</h2>
+<p>有人指出，韓國娛樂公司設定舞蹈編排費用為700萬韓元，設計費用為200萬韓元，修改費用為50萬韓元。然而，這些公司只支付一次舞蹈編排費用，但卻反覆使用該舞蹈編排來賺取數十億韓元的收入。</p>
+<p>此外，缺乏標準化合同導致不公平的貿易行為持續存在。YG娛樂、SM娛樂和JYP娛樂的CEO表示，他們不知道舞蹈編排的具體支付詳情，但承諾在未來確保公平的報酬。</p>
+<table>
+<tr>
+<th>公司</th>
+<th>CEO</th>
+<th>回應</th>
+</tr>
+<tr>
+<td>SM娛樂</td>
+<td>張哲赫</td>
+<td>我們完全理解舞蹈編排在構成K-pop內容中的重要性。如果文化體育觀光部實施正在進行的研究和隨後的制度改善，我們將在內部審查並遵守。</td>
+</tr>
+<tr>
+<td>JYP娛樂</td>
+<td>鄭煜</td>
+<td>如果制度改革，我們將積極考慮在該領域進行改善。</td>
+</tr>
+<tr>
+<td>YG娛樂</td>
+<td>楊賢碩</td>
+<td>我們將努力確保舞蹈編排獲得公平的報酬。</td>
+</tr>
+</table>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XYA1D5hHvPA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html">K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V摘下日本白金認證、Infinite慶祝出道15周年.html">K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V摘下日本白金認證、Infinite慶祝出道15周年</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html">K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
