@@ -86,4 +86,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T05:30:43+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
