@@ -11,3 +11,4 @@ https://www.koreaherald.com/view.php?ud=20241001050096
 https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241010050640
 https://www.koreaherald.com/view.php?ud=20241008050610
+https://www.koreaherald.com/view.php?ud=20241002050661
